testdata/baselines/reference/submodule/conformance/classStaticBlockUseBeforeDef5.errors.txt
classStaticBlockUseBeforeDef5.ts(3,14): error TS2729: Property 'x' is used before its initialization.
classStaticBlockUseBeforeDef5.ts(5,21): error TS7008: Member 'x' implicitly has an 'any' type.


==== classStaticBlockUseBeforeDef5.ts (2 errors) ====
    class C {
        static {
            this.x = 1;
                 ~
!!! error TS2729: Property 'x' is used before its initialization.
!!! related TS2728 classStaticBlockUseBeforeDef5.ts:5:21: 'x' is declared here.
        }
        static accessor x;
                        ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    }
    